crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__min_items_scientific_f64.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-06/schema#\",\"minItems\":10.0,\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => (arr.len() as u64) >= 10,
            _ => false,
        }
