crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__min_max_equal.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"maximum\":5,\"minimum\":5,\"type\":\"number\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Number(n) => {
                (jsonschema::__private::numeric::ge(n, 5u64))
                    && (jsonschema::__private::numeric::le(n, 5u64))
            }
            _ => false,
        }
