crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__minimum.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"minimum\":0,\"type\":\"number\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Number(n) => jsonschema::__private::numeric::ge(n, 0u64),
            _ => false,
        }
