crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__multi_type_simple.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"type\":[\"string\",\"null\"]}"
expression: is_valid_body(schema)
---
matches!(instance, serde_json::Value::String(_) | serde_json::Value::Null)
